Add buttons for different functionalities
- Added clear grid button which when clicked clears the grid container cells to white color
- Added random color button which changes grid's cell's color to random rgb values
- Added black color button that changes grid's cell's color to black color
- Added eraser button that changes grid's cell's color to white color

--- a/style.css
+++ b/style.css
@@ -20,16 +20,28 @@ body {
   background-color: #f0f0f0;
 }
 
-#grid-size-button {
+#buttons {
+  display: flex;
+  width: 40%;
+  justify-content: space-evenly;
+  align-items: center;
   margin-top: 8px;
+}
+
+button {
   padding: 5px 10px;
   background-color: #f0f0f0;
   border: 1px solid #000;
   border-radius: 5px;
   cursor: pointer;
 }
-#grid-size-button:hover {
+button:hover {
   background-color: #e0e0e0;
+}
+
+button:focus {
+  background-color: #000;
+  color: #fff;
 }
 
 .grid-container {
